# OrbitX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NAVIGATION_SYSTEM_GUIDE.md  PHASE5_SUMMARY.md  PHASE7_IMPLEMENTATION.md  PHASE8_CHECKLIST.md  PHASE8_IMPLEMENTATION_PLAN.md  PHASE8_SUMMARY.md  PROCEDURAL_PLANET_SYSTEM.md  README.md
assets/data/: solar_system.json
assets/data/presets/: anti_grav.json  binary_star.json  chaos.json
assets/shaders/: cloud.frag.glsl  cloud.vert.glsl  planet.frag.glsl  planet.vert.glsl  ring.frag.glsl  ring.vert.glsl
docs/: DEPLOYMENT_GUIDE.md  PORTFOLIO_PRESENTATION_GUIDE.md  PROCEDURAL_GENERATION.md  SCREENSHOT_VIDEO_GUIDE.md  UI_SYSTEM_DESIGN.md  VISUALIZATION_IMPLEMENTATION.md
src/: main.cpp
src/core/: Application.cpp  Application.h  Timer.cpp  Timer.h
src/debug/: EnergyMonitor.cpp  EnergyMonitor.h  OrbitTrailsSystem.cpp  OrbitTrailsSystem.h
src/entities/: CelestialBody.cpp  CelestialBody.h  SceneNode.cpp  SceneNode.h  SolarSystemFactory.cpp  SolarSystemFactory.h
src/navigation/: NavigationConfig.h  NavigationSystem.cpp  NavigationSystem.h  NavigationUI.cpp  NavigationUI.h  SimulationBodyProvider.cpp  SimulationBodyProvider.h  SimulationNavigationAdapter.h  SpaceshipNavigation.cpp  SpaceshipNavigation.h
src/physics/: AntiGravityForce.cpp  AntiGravityForce.h  GravityForce.cpp  GravityForce.h  IForceGenerator.h  Integrators.cpp  Integrators.h  PhysicsBody.h  PhysicsConfig.h  PhysicsEngine.cpp  PhysicsEngine.h  Units.h
src/procedural/: Noise.cpp  Noise.h  NoiseGenerator.cpp  NoiseGenerator.h  PlanetGenerator.cpp  PlanetGenerator.h  PlanetInstance.cpp  PlanetInstance.h
src/rendering/: AdvancedDebugRenderer.cpp  AdvancedDebugRenderer.h  DebugRender2D.cpp  DebugRender2D.h  PlanetRenderer.cpp  PlanetRenderer.h  Shader.cpp  Shader.h
src/scene/: SceneManager.cpp  SceneManager.h
src/simulation/: CollisionSystem.cpp  CollisionSystem.h  SimulationManager.cpp  SimulationManager.h
src/time/: TimeController.cpp  TimeController.h
src/ui/: CameraControlPanel.cpp  CameraControlPanel.h  ControlPanel.cpp  ControlPanel.h  DebugPanel.cpp  DebugPanel.h  ObjectInfoPanel.cpp  ObjectInfoPanel.h  PresetManagerPanel.cpp  PresetManagerPanel.h  StatusBar.cpp  StatusBar.h  UISystem.cpp  UISystem.h
src/visualization/: AdvancedVisualization.cpp  AdvancedVisualization.h  GravityFieldVisualizer.cpp  GravityFieldVisualizer.h
(+6 files in other folders)
